--- a/AdminLTE/Views/Docs/Delete.cshtml
+++ b/AdminLTE/Views/Docs/Delete.cshtml
@@ -10,101 +10,104 @@
         </div>
         <!-- /.card-header -->
         <div class="card-body">
-
-                <div class="row">
-                    <div class="col-sm">
-                        <div class="form-group">
-                            <label asp-for="Id_Usuario" class="control-label">Personal del documento</label>
-                            <input disabled asp-for="Id_Usuario" class="form-control"/>
-                        </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label>Personal para el documento</label>
+                        <select asp-for="Id_Usuario" class="Selectpersonal form-control" multiple="multiple" data-placeholder="Seleciona el Personal" style="width: 100%;"
+                                asp-items="@(new SelectList(@ViewBag.stateList1,"Id", "Email"))" disabled>
+                        </select>
                     </div>
-                    <div class="col-sm">
-                        <div class="form-group" >
-                            <label asp-for="Fecha_Creado" class="control-label">Fecha Creado</label>
-                            <input disabled type="datetime" asp-for="Fecha_Creado" class="form-control" value="@DateTimeOffset.Now" />
-                            <span asp-validation-for="Fecha_Creado" class="text-danger"></span>
-                        </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Fecha_Creado" class="control-label">Fecha Creado</label>
+                        <input disabled type="datetime" asp-for="Fecha_Creado" class="form-control" value="@DateTimeOffset.Now" />
+                        <span asp-validation-for="Fecha_Creado" class="text-danger"></span>
+                    </div>
+                </div>
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Fecha_Limite" class="control-label">Fecha Limite</label>
+                        <input disabled asp-for="Fecha_Limite" class="form-control" />
+                        <span asp-validation-for="Fecha_Limite" class="text-danger"></span>
+                    </div>
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Tipo_documento" class="control-label">Tipo de Documento</label>
+                        <select disabled asp-for="Tipo_documento" class="form-control">
+                            <option></option>
+                            <option>otro</option>
+                            <option>Viaticos</option>
+                            <option>Carta</option>
+                        </select>
+                        <span asp-validation-for="Tipo_documento" class="text-danger"></span>
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-sm">
-                        <div class="form-group">
-                            <label asp-for="Tipo_documento" class="control-label">Tipo de Documento</label>
-                            <select disabled asp-for="Tipo_documento" class="form-control">
-                                <option></option>
-                                <option>otro</option>
-                                <option>Viaticos</option>
-                                <option>Carta</option>
-                            </select>
-                            <span asp-validation-for="Tipo_documento" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="col-sm">
-                        <div class="form-group">
-                            <label asp-for="Asunto" class="control-label"></label>
-                            <input disabled asp-for="Asunto" class="form-control" />
-                            <span asp-validation-for="Asunto" class="text-danger"></span>
-                        </div>
-                    </div>
-
-                    <div class="col-sm">
-                        <div class="form-group">
-                            <label asp-for="Fecha_Limite" class="control-label">Fecha Limite</label>
-                            <input disabled asp-for="Fecha_Limite" class="form-control" />
-                            <span asp-validation-for="Fecha_Limite" class="text-danger"></span>
-                        </div>
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Asunto" class="control-label"></label>
+                        <input disabled asp-for="Asunto" class="form-control" />
+                        <span asp-validation-for="Asunto" class="text-danger"></span>
                     </div>
                 </div>
 
-                <div class="row">
-                    <div class="col-sm">
-                        <div class="form-group">
-                            <label asp-for="Via" class="control-label"></label>
-                            <input disabled asp-for="Via" class="form-control" />
-                            <span asp-validation-for="Via" class="text-danger"></span>
-                        </div>
+
+            </div>
+
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Via" class="control-label"></label>
+                        <input disabled asp-for="Via" class="form-control" />
+                        <span asp-validation-for="Via" class="text-danger"></span>
                     </div>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="col-sm">
-                        <div class="form-group">
-                            <label asp-for="Anexo" class="control-label"></label>
-                            <input disabled asp-for="Anexo" class="form-control" />
-                            <span asp-validation-for="Anexo" class="text-danger"></span>
-                        </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="form-group">
+                        <label asp-for="Anexo" class="control-label"></label>
+                        <input disabled asp-for="Anexo" class="form-control" />
+                        <span asp-validation-for="Anexo" class="text-danger"></span>
                     </div>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="col-sm">
-                        <div class="row">
-                            <div class="col-sm-12">
-                                <!-- textarea -->
-                                <div class="form-group">
-                                    <label asp-for="Descripcion">Descripción</label>
-                                    <textarea disabled class="form-control" rows="4" asp-for="Descripcion" placeholder="Introducir descripción del documento "></textarea>
-                                </div>
+            <div class="row">
+                <div class="col-sm">
+                    <div class="row">
+                        <div class="col-sm-12">
+                            <!-- textarea -->
+                            <div class="form-group">
+                                <label asp-for="Descripcion">Descripción</label>
+                                <textarea disabled class="form-control" rows="4" asp-for="Descripcion" placeholder="Introducir descripción del documento "></textarea>
                             </div>
                         </div>
                     </div>
                 </div>
+            </div>
 
-                <div class="row">
-                    <div class="col-sm-2 mx-sm-auto">
-                        <div class="form-group">
-                            <form asp-action="Delete">
-                                <input type="hidden" asp-for="Id" />
-                                | <input type="submit" value="Delete" class="btn btn-danger" /> |
-                            </form>
-                        </div>
+            <div class="row">
+                <div class="col-sm-2 mx-sm-auto">
+                    <div class="form-group">
+                        <form asp-action="Delete">
+                            <input type="hidden" asp-for="Id" />
+                            | <input type="submit" value="Delete" class="btn btn-danger" /> |
+                        </form>
                     </div>
                 </div>
+            </div>
         </div>
     </div>
-</div>
 <button type="button" class="btn btn-danger" data-toggle="modal" data-target="#modal-danger">
     Launch Danger Modal
 </button>
