--- a/AdminLTE/Views/Docs/Edit.cshtml
+++ b/AdminLTE/Views/Docs/Edit.cshtml
@@ -10,10 +10,15 @@
     <!-- /.card-header -->
     <div class="card-body">
         <form asp-action="Edit">
-
+            
             <div class="row">
                 <div class="col-sm">
-
+                    <div class="form-group">
+                        <label>Personal para el documento</label>
+                        <select asp-for="Id_Usuario" class="Selectpersonal form-control" multiple="multiple" data-placeholder="Seleciona el Personal" style="width: 100%;"
+                                asp-items="@(new SelectList(@ViewBag.stateList1,"Id", "Email"))">
+                        </select>
+                    </div>
                 </div>
             </div>
 
@@ -75,7 +80,7 @@
                             <!-- textarea -->
                             <div class="form-group">
                                 <label asp-for="Descripcion">Descripción</label>
-                                <textarea class="form-control" rows="4" asp-for="Descripcion"  placeholder="Introducir descripción del documento "></textarea>
+                                <textarea class="form-control" rows="4" asp-for="Descripcion" placeholder="Introducir descripción del documento "></textarea>
                             </div>
                         </div>
                     </div>
@@ -95,9 +100,7 @@
                 <input type="datetime" asp-for="Fecha_Creado" class="form-control" value="@DateTimeOffset.Now" />
                 <span asp-validation-for="Fecha_Creado" class="text-danger"></span>
             </div>
-            <div class="form-group" style="visibility:hidden; position:absolute">
-                <input type="hidden" asp-for="Id_Usuario" class="form-control" />
-            </div>
+            
         </form>
     </div>
 </div>
