--- a/AdminLTE/Views/SuperAdmin/Index.cshtml
+++ b/AdminLTE/Views/SuperAdmin/Index.cshtml
@@ -10,46 +10,69 @@
     ViewData["Title"] = "User Accounts";
 }
 
-<h2>@ViewData["Title"]</h2>
+<div class="card-body  card-dark ">
+    <div class="row">
+        <div class=" col-sm">
+            <div class="card">
+                <div class="card-header">
+                    <h3 class="card-title">@ViewData["Title"]</h3>
+                    <div class="card-tools">
+                        <div class="input-group input-group-sm" style="width: 150px;">
+                            <input type="text" name="table_search" class="form-control float-right" placeholder="Search">
 
+                            <div class="input-group-append">
+                                <button type="submit" class="btn btn-default"><i class="fas fa-search"></i></button>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <!-- /.card-header -->
+
+                <div class="card-body table-responsive p-0" style="height: 300px;">
+                    <table class="table table-head-fixed table-hover">
+                        <thead>
+                            <tr>
+                                <th>ID</th>
+                                <th>NAME</th>
+                                <th>EMAIL</th>
+                                <th></th>
+                            </tr>
+                        </thead>
+                        <tbody>
+                            @if (Model.Count() == 0)
+                            {
+                                <tr>
+                                    <td colspan="3" class="text-center">
+                                        No User Accounts
+                                    </td>
+                                </tr>
+                            }
+                            else
+                            {
+                                foreach (ApplicationUser user in Model)
+                                {
+                                    <tr>
+                                        <td>@user.Id</td>
+                                        <td>@user.FirstName @user.LastName</td>
+                                        <td>@user.Email</td>
+                                        <td>
+                                            <a class="btn btn-success" asp-controller="SuperAdmin" asp-action="Edit" asp-route-id="@user.Id">Edit</a>
+                                            <a class="btn btn-success" asp-controller="SuperAdmin" asp-action="ChangePassword" asp-route-id="@user.Id">Change Password</a>
+                                            <a class="btn btn-danger btn-delete" asp-controller="SuperAdmin" asp-action="Delete" asp-route-id="@user.Id">Delete</a>
+                                        </td>
+                                    </tr>
+                                }
+                            }
+
+                        </tbody>
+                    </table>
+                </div>
+                <!-- /.card-body -->
+            </div>
+        </div>
+    </div>
+</div>
 <div class="text-danger" asp-validation-summary="ModelOnly"></div>
-
-<table class="table table-condensed table-bordered table-striped" id="myTable">
-    <thead>
-        <tr>
-            <th>ID</th>
-            <th>Name</th>
-            <th>Email</th>
-            <th></th>
-        </tr>
-    </thead>
-    <tbody>
-        @if (Model.Count() == 0)
-        {
-            <tr>
-                <td colspan="3" class="text-center">
-                    No User Accounts
-                </td>
-            </tr>
-        }
-        else
-        {
-            foreach (ApplicationUser user in Model)
-            {
-                <tr>
-                    <td>@user.Id</td>
-                    <td>@user.FirstName @user.LastName</td>
-                    <td>@user.Email</td>
-                    <td>
-                        <a class="btn btn-success" asp-controller="SuperAdmin" asp-action="Edit" asp-route-id="@user.Id">Edit</a>
-                        <a class="btn btn-success" asp-controller="SuperAdmin" asp-action="ChangePassword" asp-route-id="@user.Id">Change Password</a>
-                        <a class="btn btn-danger btn-delete" asp-controller="SuperAdmin" asp-action="Delete" asp-route-id="@user.Id">Delete</a>
-                    </td>
-                </tr>
-            }
-        }
-    </tbody>
-</table>
 
 <a class="btn btn-primary" asp-controller="Account" asp-action="Register">Nuevo Usuario</a>
 
