--- a/AdminLTE/Views/Shared/_Layout.cshtml
+++ b/AdminLTE/Views/Shared/_Layout.cshtml
@@ -122,8 +122,8 @@ desired effect
     <!-- AdminLTE App -->
     <script src="~/lib/admin-lte/dist/js/adminlte.js"></script>
     <script src="~/lib/admin-lte/dist/js/demo.js"></script>
-    <script src="~/lib/plugins/jquery-knob/jquery.knob.min.js"></script>
-    <script src="~/lib/plugins/sparklines/sparkline.js"></script>
+
+
     <script src="~/lib/admin-lte/dist/js/adminlte.min.js"></script>
     <script src="~/js/Common.js"></script>
     <script src="~/lib/plugins/select2/js/select2.full.min.js"></script>
@@ -131,6 +131,12 @@ desired effect
     <script src="~/lib/plugins/tempusdominus-bootstrap-4/js/tempusdominus-bootstrap-4.min.js"></script>
     <script src="~/lib/plugins/daterangepicker/daterangepicker.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/select2@4.0.13/dist/js/select2.min.js"></script>
+
+
+
+    <!--Charts-->
+    <script src="~/lib/plugins/jquery-knob/jquery.knob.min.js"></script>
+    <script src="~/lib/plugins/sparklines/sparkline.js"></script>
     @RenderSection("scripts", required: false)
 </body>
 </html>
