--- a/AdminLTE/Views/Docs/Create.cshtml
+++ b/AdminLTE/Views/Docs/Create.cshtml
@@ -12,35 +12,20 @@
             <form asp-action="Create">
 
                 <div class="row">
-                    @*<div class="col-sm">
-                        <div class="form-group">
-                            <label asp-for="Id_Usuario" class="control-label">Personal para el documento</label>
-                            <select asp-for="Id_Usuario"
-                                    class="form-control"
-                                    asp-items="@(new SelectList(@ViewBag.stateList1,"Id", "Email"))">
-                            </select>
-                            <input asp-for="Id_Usuario" class="form-control" />
-                                    <span asp-validation-for="Id_Usuario" class="text-danger"></span>
-                                </div>
-
-                    </div>*@
-                    
                     <div class="col-sm">
                         <div class="form-group">
                             <label>Personal para el documento</label>
-                            <select asp-for="Id_Usuario" class="Selectpersonal form-control" multiple="multiple" data-placeholder="Seleciona el Personal" style="width: 100%;" 
-                                    asp-items="@(new SelectList(@ViewBag.stateList1,"Id", "Email"))">
+                            <select asp-for="Id_Usuario" class="Selectpersonal " multiple="multiple" data-placeholder="Seleciona el Personal" style="width: 100%;"
+                                    asp-items="@(IEnumerable<SelectListItem>)@ViewBag.ClarderSousSecteurID">
                             </select>
-                        </div>
+                        </div>  
                     </div>
                 </div>
-
                 <div class="row">
                     <div class="col-sm">
                         <div class="form-group">
                             <label asp-for="Tipo_documento" class="control-label">Tipo de Documento</label>
-                            <select asp-for="Tipo_documento" class="form-control">
-                                <option></option>
+                            <select asp-for="Tipo_documento" data-placeholder="Seleccionar Tipo" class="form-control">
                                 <option>otro</option>
                                 <option>Viaticos</option>
                                 <option>Carta</option>
@@ -68,7 +53,7 @@
                                     </span>
                                 </div>
                                 <input id="reservation" asp-for="Fecha_Limite" class="form-control" />
-                                <span asp-validation-for="Fecha_Limite" class="text-danger" ></span>
+                                <span asp-validation-for="Fecha_Limite" class="text-danger"></span>
                             </div>
                         </div>
                     </div>
@@ -115,7 +100,7 @@
                         </div>
                     </div>
                 </div>
-                
+
 
                 <div class="form-group" style="visibility:hidden; position:absolute">
                     <label asp-for="Fecha_Creado" class="control-label">Fecha Creado</label>
