--- a/AdminLTE/Views/Docs/Details.cshtml
+++ b/AdminLTE/Views/Docs/Details.cshtml
@@ -17,7 +17,7 @@
 
                     <label>Personal para el documento</label>
                     <select asp-for="Id_Usuario" class="Selectpersonal form-control" multiple="multiple" data-placeholder="Seleciona el Personal" style="width: 100%;"
-                            asp-items="@(new SelectList(@ViewBag.stateList1,"Id", "Email"))" disabled>
+                             asp-items="@(IEnumerable<SelectListItem>)@ViewBag.ClarderSousSecteurID" disabled>
                     </select>
                 </div>
             </div>
