--- a/AdminLTE/Views/Home/Index.cshtml
+++ b/AdminLTE/Views/Home/Index.cshtml
@@ -14,6 +14,156 @@
     <script src="~/lib/plugins/datatables/jquery.dataTables.js" asp-append-version="true"></script>
     <script src="~/lib/plugins/datatables/jquery.dataTables.min.js" asp-append-version="true"></script>
 </environment>
+<link href="~/css/dash.css" rel="stylesheet" />
+<div class="row">
+    <div class="col-sm">
+        <div class="card">
+            <div class="card-header">
+                <h3 class="card-title">Documentos Activos</h3>
+            </div>
+            <!-- /.card-header -->
+            <div class="card-body p-0">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th>Documento</th>
+                            <th>Progreso</th>
+                            <th style="width: 10px">Fecha Limite</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        <tr>
+                            <td>
+                                ok
+                            </td>
+
+                            <td>
+                                <div class="progress progress" id="var">
+                                    <div class="progress-bar progress-bar-danger" style="width: 25%"></div>
+                                </div>
+                            </td>
+
+                            <td>
+                                31/12/2020
+                            </td>
+                        </tr>
+                    </tbody>
+                </table>
+            </div>
+            <!-- /.card-body -->
+        </div>
+    </div>
+
+    <div class="col-sm">
+        <div class="row">
+                <div class="card-body  card-dark ">
+                    <div class="row">
+                        <div class=" col-sm">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h3 class="card-title">Time Over</h3>
+                                </div>
+                                <!-- /.card-header -->
+
+                                <div class="card-body table-responsive p-0" style="height: 300px;">
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <div class="card-body">
+                                                <h6>Personal</h6> <p></p>
+                                                <h6>Tipo de documento:</h6> <p></p>
+                                                <h6>Asunto</h6><p></p>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm">
+                                            <div class="card-body">
+                                                <p>dates</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <div class="card-body">
+                                                <p>dates</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm">
+                                            <div class="card-body">
+                                                <p>dates</p>
+                                            </div>
+                                        </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-sm">
+                                            <div class="card-body">
+                                                <p>dates</p>
+                                            </div>
+                                        </div>
+                                        <div class="col-sm">
+                                            <div class="card-body">
+                                                <p>dates</p>
+                                            </div>
+                                        </div>
+                                    </div>
+
+                                </div>
+                                <!-- /.card-body -->
+                            </div>
+                    </div>
+                </div>
+            </div>
+            <div class="row">
+                <div class="card-body  card-dark ">
+                    <div class="row">
+                        <div class=" col-sm">
+                            <div class="card">
+                                <div class="card-header">
+                                    <h3 class="card-title">Recently Finished</h3>
+                                </div>
+                                <!-- /.card-header -->
+
+                                <div class="card-body table-responsive p-0" style="height: 300px;">
+                                    <table class="table table-head-fixed table-hover">
+                                        <thead>
+                                            <tr>
+                                                <th>ID</th>
+                                                <th>NAME</th>
+                                                <th>EMAIL</th>
+                                                <th></th>
+                                            </tr>
+                                        </thead>
+                                        <tbody>
+                                            <tr>
+                                                <td>
+                                                    <p>Lorem ipsum</p>
+                                                </td>
+                                                <td>
+                                                    <p>Lorem ipsum</p>
+                                                </td>
+                                                <td>
+                                                    <p>Lorem ipsum</p>
+                                                </td>
+                                                <td>
+                                                    <p>Lorem ipsum</p>
+                                                </td>
+                                                <td>
+                                                    <p>Lorem ipsum</p>
+                                                </td>
+                                            </tr>
+
+                                        </tbody>
+                                    </table>
+                                </div>
+                                <!-- /.card-body -->
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+
 
 <div class="row">
     <div class="col-md-6">
